CHANGES for LIRE
================

2013-04-15
==========
  - Added hash based approach for CEDD to DocumentBuilderFactory and ImageSearcherFactory
  - Added command line parameters to ParallelIndexer, it can be run from shell.
  - Deleted unused DocumentBuilder and ImageSearcher implementations
  - Optimized PHOG runtime a little bit

2013-04-15
==========
  - Moved serialized hash functions to classpath & SVN.
  - Added GZIP compression to hash file.
  - Fixed bug in PHOG: Far too many bins were created.
  - Added a producer-consumer version of the indexer as ParallelIndexer.
  - Parallelized TestWang
  - Added hashing to GenericDocumentBuilder.
  - Added ParallelIndexing to sample application.

2013-04-12
==========
  - Added BitSamplingImageSearcher

2013-04-11
==========
  - Added method to BitSampling
  - Removed printStackTrace from Extractor

2013-04-08
==========
  - Added security check to BitSampling.generateHashes not to overwrite hash file on disk.
  - Added additional error message to Indexor.
  - Changed signature of SimpleImageSearchHits to support a simple web app.

2013-04-06
==========
  - Fixed bug with transparency channel in PHOG.

2013-04-06
==========
  - Extended buffer size in Indexor.
  - Added levels to PHOG, reduced serialization size.
  - Introduced LuminanceLayout feature.
  - Tuned PHOG, it now exceeds EdgeHistogram on the Wang 1000 SIMPLIcity data set.
  - Added LuminanceLayout and PHOG to DocumentBuilderFactory, ImageSearcherFactory, Extractor and LireDemo
  - Added option to Extractor that out file is generated by itself

2013-04-05
==========
  - Added Canny Edge Detector
  - Added PHOG descriptor in a simple, 1-level version.

2013-04-04
==========
  - Added a method to check if an image file can be opened by Java.

2013-03-26
==========
  - Added new method to abstract SearchHitsFilter class
  - Added TestRerankTextSearch.java
  - Added functions to FileUtils.java

2013-03-12
==========